# wit-transitive-deps

./: Cargo.toml  README.md
src/: bindings.rs
wit/: world.wit
wit/packageA/: a-child.wit  a.wit
wit/packageB/: b.wit
wit/packageUtils/: utils.wit
