[package]
name = "transitive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:transitive"

[package.metadata.component.target.dependencies]
"foo:a" = { path = "./wit/packageA/" }
"foo:b" = { path = "./wit/packageB/" }
"foo:utils" = { path = "./wit/packageUtils/" }
